# orbit

./: .dockerignore  .env.example  .env.gcp  .gcloudignore  .gitignore  .pylintrc  BUILD_AND_SPEC.md  DEVELOPER_DOCUMENTATION.md  Dockerfile  MEMORY_DECISION_ENGINE_SPEC (1).md  MEMORY_DECISION_ENGINE_SPEC_v2_INTELLIGENT.md  Makefile  ORBIT_SDK_API_SPECIFICATION.md  README.de.md  README.es.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  memory.npz  metaData.md  metrics.json  mypy.ini  pyproject.toml  pytest.ini  render.yaml  ruff.toml
.github/workflows/: docs-pages.yml  front-end-e2e.yml  publish-pypi.yml  publish-testpypi.yml  quality-gate.yml
deploy/alertmanager/: alertmanager.yml
deploy/otel/: otel-collector-config.yaml
deploy/prometheus/: alerts-orbit.yml  prometheus.yml
docs/: ARCHITECTURE.md  DEPLOY_GCP_CLOUD_RUN.md  DEPLOY_RENDER_VERCEL.md  ENGINE_MANUAL.md  FORMULAS.md  GCP_ENV_MATRIX.md  GITHUB_PAGES_SETUP.md  OIDC_DASHBOARD_SETUP.md  ORBIT_CLOUD_DASHBOARD_PLAN.md  TESTING.md  TODO.md  _config.yml  api_reference.md  conf.py  deployment.md  developer_documentation.md  examples.md  index.md  personalization.md  quickstart.md  troubleshooting.md
examples/: _env.py  agent_integration.py  async_usage.py  basic_usage.py  batch_operations.py  feedback_loop.py  personalization_quickstart.py
examples/http_api_clients/: .env.example  README.md  go_http.go  node_fetch.mjs  package.json  python_http.py
examples/live_chatbot_ollama/: README.md  app.py  index.html  smoke_test.py
examples/live_meal_coach_ollama/: README.md  app.py  compare_modes.py  index.html  smoke_test.py
examples/mock_oidc_provider/: app.py
examples/nodejs_orbit_api_chatbot/: .env.example  README.md  package-lock.json  package.json  server.mjs
front-end/: .env.example  .env.oidc.providers.example  .gitignore  README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
front-end/app/: globals.css  layout.tsx  page.tsx
front-end/components/: language-selector.tsx
front-end/lib/: dashboard-auth.ts  orbit-dashboard-proxy.ts  orbit-dashboard.ts
front-end/locales/: docs.ts
integrations/openclaw-memory/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
migrations/: env.py
migrations/versions/: 20260221_0001_create_memories_table.py  20260223_0002_create_api_state_tables.py  20260224_0003_add_account_key_to_memories.py  20260224_0004_create_api_keys_table.py  20260224_0005_dashboard_auth_audit_and_key_rotation.py  20260225_0006_extend_dashboard_user_profile.py  20260225_0007_create_pilot_pro_requests_table.py
scripts/: check_quality_gate.py  dashboard.py  deploy_gcp_cloud_run.sh  docker-entrypoint.sh  generate_jwt.py  generate_test_data.py  live_oidc_callback_smoke.py  run_lab_tests.py  run_orbit_eval.py  soak_personalization.py  storage_throughput_benchmark.py  stress_audit.py  stress_decay_ab.py  stress_decay_eval_ab.py  stress_decay_soak_ab.py
src/decision_engine/: __init__.py  config.py  database_url.py  decay_learner.py  engine.py  importance_model.py  math_utils.py  models.py  observability.py  retrieval_ranker.py  semantic_encoding.py  storage_manager.py  storage_protocol.py  storage_sqlalchemy.py  vector_codec.py
src/memory_engine/: __init__.py  config.py  engine.py  logger.py
src/orbit/: __init__.py  async_client.py  client.py  config.py  eval_harness.py  exceptions.py  http.py  logger.py  models.py  soak_harness.py  telemetry.py  version.py
src/orbit_api/: __init__.py  __main__.py  app.py  auth.py  config.py  service.py  telemetry.py
stress_reports/run_20260222/: api_concurrency.npz  api_concurrency_heavy.npz  api_concurrency_heavy_metrics.json  api_concurrency_metrics.json  api_retrieve_scale.npz  api_retrieve_scale_5k.npz  api_retrieve_scale_5k_metrics.json  api_retrieve_scale_metrics.json  compression.npz  compression_metrics.json  concurrency.npz  concurrency_metrics.json  concurrency_repro.npz  concurrency_repro_metrics.json  entity_isolation.npz  entity_isolation_metrics.json  feedback_training.npz  feedback_training_metrics.json  relevance_noise.npz  relevance_noise_metrics.json  storage_bloat.npz  storage_bloat_metrics.json  stress_audit_report.json  stress_audit_report.md  throughput_scaling.npz  throughput_scaling_metrics.json
stress_reports/run_20260222_personalization/: compression.npz  compression_metrics.json  concurrency.npz  concurrency_metrics.json  entity_isolation.npz  entity_isolation_metrics.json  feedback_training.npz  feedback_training_metrics.json  relevance_noise.npz  relevance_noise_metrics.json  storage_bloat.npz  storage_bloat_metrics.json  stress_audit_report.json  stress_audit_report.md  throughput_scaling.npz  throughput_scaling_metrics.json
stress_reports/run_20260222_personalization_v2/: compression.npz  compression_metrics.json  concurrency.npz  concurrency_metrics.json  entity_isolation.npz  entity_isolation_metrics.json  feedback_training.npz  feedback_training_metrics.json  (+8 more)
tests/: conftest.py
(+209 files in other folders)
